# ArcVideo

./: .clang-tidy  .codespell-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  update-copyright.sh
app/: CMakeLists.txt  core.cpp  core.h  main.cpp  version.cpp  version.h
app/audio/: audiomanager.cpp  audiomanager.h  audioprocessor.cpp  audioprocessor.h  audiovisualwaveform.cpp  audiovisualwaveform.h
app/cli/cliexport/: cliexportmanager.cpp  cliexportmanager.h
app/cli/cliprogress/: cliprogressdialog.cpp  cliprogressdialog.h
app/cli/clitask/: clitaskdialog.cpp  clitaskdialog.h
app/codec/: conformmanager.cpp  conformmanager.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  exportcodec.cpp  exportcodec.h  exportformat.cpp  exportformat.h  frame.cpp  frame.h  planarfiledevice.cpp  planarfiledevice.h
app/codec/ffmpeg/: ffmpegdecoder.cpp  ffmpegdecoder.h  ffmpegencoder.cpp  ffmpegencoder.h
app/codec/oiio/: oiiodecoder.cpp  oiiodecoder.h  oiioencoder.cpp  oiioencoder.h
app/common/: autoscroll.h  cancelableobject.h  commandlineparser.cpp  commandlineparser.h  crashpadinterface.cpp  crashpadinterface.h  crashpadutils.h  debug.cpp  debug.h  decibel.h  define.h  digit.h  ffmpegutils.cpp  ffmpegutils.h  filefunctions.cpp  filefunctions.h  html.cpp  html.h  jobtime.cpp  jobtime.h  lerp.h  memorypool.h  ocioutils.cpp  ocioutils.h  oiioutils.cpp  oiioutils.h  otioutils.h  power.h  qtutils.cpp  qtutils.h  range.h  ratiodialog.cpp  ratiodialog.h  threadsafemap.h  tohex.h  util.h  xmlutils.cpp  xmlutils.h
app/config/: config.cpp  config.h
app/core/: core.h
app/core/render/: audioparams.cpp  audioparams.h  pixelformat.h  samplebuffer.cpp  samplebuffer.h  sampleformat.h
app/core/util/: bezier.cpp  bezier.h  color.cpp  color.h  cpuoptimize.h  log.h  math.h  rational.cpp  rational.h  stringutils.cpp  stringutils.h  tests.cpp  tests.h  timecodefunctions.cpp  timecodefunctions.h  timerange.cpp  timerange.h  value.cpp  value.h
app/crashhandler/: CMakeLists.txt  crashhandler.cpp  crashhandler.h
app/dialog/about/: about.cpp  about.h  scrollinglabel.cpp  scrollinglabel.h
app/dialog/actionsearch/: actionsearch.cpp  actionsearch.h
app/dialog/autorecovery/: autorecoverydialog.cpp  autorecoverydialog.h
app/dialog/color/: colordialog.cpp  colordialog.h
app/dialog/configbase/: configdialogbase.cpp  configdialogbase.h  configdialogbasetab.cpp  configdialogbasetab.h
app/dialog/diskcache/: diskcachedialog.cpp  diskcachedialog.h
app/dialog/export/: export.cpp  export.h  exportadvancedvideodialog.cpp  exportadvancedvideodialog.h  exportaudiotab.cpp  exportaudiotab.h  exportformatcombobox.cpp  exportformatcombobox.h  exportsavepresetdialog.cpp  exportsavepresetdialog.h  exportsubtitlestab.cpp  exportsubtitlestab.h  exportvideotab.cpp  exportvideotab.h
app/dialog/footageproperties/: footageproperties.cpp  footageproperties.h
app/dialog/footagerelink/: footagerelinkdialog.cpp  footagerelinkdialog.h
app/dialog/keyframeproperties/: keyframeproperties.cpp  keyframeproperties.h
app/dialog/markerproperties/: markerpropertiesdialog.cpp  markerpropertiesdialog.h
app/dialog/otioproperties/: otiopropertiesdialog.cpp  otiopropertiesdialog.h
app/dialog/preferences/: keysequenceeditor.cpp  keysequenceeditor.h  preferences.cpp  preferences.h
app/dialog/progress/: progress.cpp  progress.h
app/dialog/projectproperties/: projectproperties.cpp  projectproperties.h
app/dialog/rendercancel/: rendercancel.cpp  rendercancel.h
app/dialog/sequence/: presetmanager.h  sequence.cpp  sequence.h  sequencedialogparametertab.cpp  sequencedialogparametertab.h  sequencedialogpresettab.cpp  sequencedialogpresettab.h  sequencepreset.h
app/dialog/speedduration/: speeddurationdialog.cpp  speeddurationdialog.h
app/dialog/task/: task.cpp  task.h
app/dialog/text/: text.cpp  text.h
app/node/: factory.cpp  factory.h  globals.cpp  globals.h  inputdragger.cpp  inputdragger.h  inputimmediate.cpp  inputimmediate.h  keyframe.cpp  keyframe.h  node.cpp  node.h  nodeundo.cpp  nodeundo.h  param.cpp  param.h  project.cpp  project.h  serializeddata.cpp  serializeddata.h  splitvalue.h  traverser.cpp  traverser.h  value.cpp  value.h  valuedatabase.cpp  valuedatabase.h
app/node/block/: block.cpp  block.h
app/packaging/: CMakeLists.txt
app/panel/: panel.cpp  panel.h  panelmanager.cpp  panelmanager.h
app/render/: alphaassoc.h  audioplaybackcache.cpp  audioplaybackcache.h  audiowaveformcache.cpp  audiowaveformcache.h  cancelatom.h  colorprocessor.cpp  colorprocessor.h  colorprocessorcache.h  colortransform.h  diskmanager.cpp  diskmanager.h  framehashcache.cpp  framehashcache.h  framemanager.cpp  framemanager.h  loopmode.h  managedcolor.cpp  managedcolor.h  playbackcache.cpp  playbackcache.h  previewaudiodevice.cpp  previewaudiodevice.h  previewautocacher.cpp  previewautocacher.h  projectcopier.cpp  projectcopier.h  rendercache.h  renderer.cpp  renderer.h  renderjobtracker.cpp  renderjobtracker.h  rendermanager.cpp  rendermanager.h  rendermodes.h  renderprocessor.cpp  renderprocessor.h  renderticket.cpp  renderticket.h  shadercode.h  (+6 more)
app/shaders/: CMakeLists.txt  chromakey.frag
app/task/: task.h  taskmanager.cpp  taskmanager.h
app/timeline/: timelinecommon.h  timelinecoordinate.cpp  timelinecoordinate.h  timelinemarker.cpp  timelinemarker.h  timelineundocommon.h  timelineundogeneral.cpp  timelineundogeneral.h  timelineundopointer.cpp  timelineundopointer.h  timelineundoripple.cpp  timelineundoripple.h  timelineundosplit.cpp  timelineundosplit.h  timelineundotrack.cpp  timelineundotrack.h  timelineundoworkarea.cpp  timelineundoworkarea.h  timelineworkarea.cpp  timelineworkarea.h
app/tool/: tool.h
app/ts/: CMakeLists.txt  ar_AR.ts  bs_BA.ts  cs_CZ.ts  de_DE.ts  en_US.ts  es_ES.ts  fr_FR.ts  hr_HR.ts  id_ID.ts  it_IT.ts  ja_JP.ts  pt_BR.ts  ru_RU.ts  sr_RS.ts  tr_TR.ts  uk_UK.ts  zh_CN.ts  zh_TW.ts
app/ui/: colorcoding.cpp  colorcoding.h  humanstrings.cpp  humanstrings.h
app/undo/: undocommand.cpp  undocommand.h  undostack.cpp  undostack.h
(+606 files in other folders)
